--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
+cassandra-driver==3.29.2
 click==8.1.7
+dbus-python==1.3.2
 geomet==0.2.1.post1
+numpy==1.26.4
+pandas==2.2.3
+psycopg2-binary==2.9.10
+PyQt6==6.7.0
+PyQt6_sip==13.6.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
 PyYAML==6.0.2
 scylla-driver==3.26.9
+setuptools==69.5.1.post0
 six==1.16.0
-psycopg2-binary==2.9.10
-
+tzdata==2024.2
